# basic-chess

./: CMakeLists.txt
include/: Constant.h  Game.h  Parser.h  Piece.h  Player.h  PrintBoard.h  Square.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/: Game.cpp  Parser.cpp  Piece.cpp  Player.cpp  PrintBoard.cpp  Square.cpp  main.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
